2006-03-30  CrazyPit  <crazypit13@gmail.com>
	* rails.el: interface to Rails HTML API documentaion. rails-browse-api-at-point, 
	  rails-browse-api-method, rails-browse-api-class, rails-get-api-entries
	* rails-lib.el: new function capital-word-p
	* rails-scipts.el: Rake integration - new functions rails-rake and rails-rake-tasks.
	  Running ruby consoles and breakpointers in separated buffers for each project:
	  new functions run-ruby-in-buffer, rails-run-interactive and rails-run-console,
	  rails-run-breakpointer updated	  
	* rails-core.el new macro in-root
	* rails.el: new variable rails-tags-command, rails-open-log now interactive + cleanup,
	rails-create-tags cleanup, new hook for dired mode
	* rails-navigation.el: new variable rails-find-file-function, 3 new rails-finds.
	* rails-ui.el: cleanup, add many new hotkeys

2006-03-28  CrazyPit  <crazypit13@gmail.com>
	* rails-ui.el: create rails-ui.el, move UI code from rails.el to rails-ui.el
	* rails-navigation.el: rails-goto-controller-->view, rails-goto-view-->controller
	  rails-goto-all-->simple, rails-goto-all-->helper, rails-goto-all-->functional-test,
	  rails-goto-all-->controller extracted to other files. 
	  Refactoring of rails-goto-file-from-file-actions and rails-goto-file-from-file
	  now run-time generation and invisible, helper function rails-goto-menu-call.
	  menu items available.
	* rails-for-rhtml.el: switch-to-controller-action added
	* rails-for-controller.el: views-for-current-action. switch-by-current-controller,
	  switch-to-functional-test, switch-to-helper, switch-to-view2, switch-to-controller --
	  extracted with renaming from rails-navigation.el. 
	* rails-core.el: fix in functional-test-file, + long-controller-name added, 
	  rails-core:menu upadte (posn-at-point call added)

2006-03-28  dima  <dima.exe@gmail.com>

	* rails-for-controller.el: new functions
	rails-controller:get-current-controller-and-action,
	rails-controller:switch-with-menu